delete button and dialogue refactor

--- a/src/app/components/match/item-match/item-match.component.html
+++ b/src/app/components/match/item-match/item-match.component.html
@@ -48,12 +48,12 @@
                 SCOREBOARD VIEW
               </button>
               <app-delete-button
-                [item]="'Match'"
+                [item]="buttonTitle"
                 class="tui-island__footer-button"
                 style="padding: 10px"
               ></app-delete-button>
               <app-delete-dialog
-                [item]="'Match'"
+                [item]="buttonTitle"
                 (delete)="onDelete()"
               ></app-delete-dialog>
 
