--- a/src/app/shared/ui/buttons/delete-button/delete-button.component.html
+++ b/src/app/shared/ui/buttons/delete-button/delete-button.component.html
@@ -4,7 +4,7 @@
   [size]="buttonSize"
   tuiButton
   type="button"
-  (click)="onButtonClick()"
+  (click)="onButtonClick(dialogId)"
 >
   {{ action | uppercase }} {{ item | uppercase }}
 </button>
