add button created for form

--- a/src/app/components/match/add-edit-match/add-edit-match.component.html
+++ b/src/app/components/match/add-edit-match/add-edit-match.component.html
@@ -121,10 +121,12 @@
         <button
           appearance="create"
           tuiButton
+          size="l"
           type="submit"
+          style="padding: 10px"
           [disabled]="!matchForm.valid"
         >
-          Add
+          ADD
         </button>
         <button
           appearance="secondary"
