--- a/src/app/components/tournament/item-tournament/item-tournament.component.html
+++ b/src/app/components/tournament/item-tournament/item-tournament.component.html
@@ -36,6 +36,7 @@
         <app-delete-dialog
           [item]="buttonTitle"
           (delete)="onDelete()"
+          [dialogId]="'deleteDialog'"
         ></app-delete-dialog>
 
       </div>
