--- a/src/app/components/team/add-edit-team/add-edit-team.component.html
+++ b/src/app/components/team/add-edit-team/add-edit-team.component.html
@@ -84,15 +84,11 @@
     </div>
 
     <p>
-      <button
-        appearance="create"
-        tuiButton
-        type="submit"
-        size="m"
+      <app-create-button-in-form
+        [action]="'add'"
         [disabled]="!teamForm.valid"
-      >
-        Add
-      </button>
+      ></app-create-button-in-form>
+
       <button
         appearance="secondary"
         tuiButton
