--- a/src/app/components/match/add-edit-match/add-edit-match.component.html
+++ b/src/app/components/match/add-edit-match/add-edit-match.component.html
@@ -122,15 +122,9 @@
           [action]="'add'"
           [disabled]="!matchForm.valid"
         ></app-create-button-in-form>
-        <button
-          appearance="secondary"
-          tuiButton
-          type="button"
-          style="padding: 10px"
+        <app-cancel-button-in-form
           (click)="observer.complete()"
-        >
-          CANCEL
-        </button>
+        ></app-cancel-button-in-form>
       </p>
     </div>
   </form>
