--- a/src/app/components/team/add-edit-team/add-edit-team.component.html
+++ b/src/app/components/team/add-edit-team/add-edit-team.component.html
@@ -89,15 +89,9 @@
         [disabled]="!teamForm.valid"
       ></app-create-button-in-form>
 
-      <button
-        appearance="secondary"
-        tuiButton
-        type="button"
-        style="padding: 10px"
+      <app-cancel-button-in-form
         (click)="observer.complete()"
-      >
-        CANCEL
-      </button>
+      ></app-cancel-button-in-form>
     </p>
   </form>
 </ng-template>
