--- a/src/app/components/tournament/tournament-add-edit-form/tournament-add-edit-form.component.html
+++ b/src/app/components/tournament/tournament-add-edit-form/tournament-add-edit-form.component.html
@@ -48,15 +48,9 @@
         [action]="'add'"
         [disabled]="!tournamentForm.valid"
       ></app-create-button-in-form>
-      <button
-        appearance="secondary"
-        tuiButton
-        type="button"
-        style="padding: 10px"
+      <app-cancel-button-in-form
         (click)="observer.complete()"
-      >
-        CANCEL
-      </button>
+      ></app-cancel-button-in-form>
     </p>
   </form>
 </ng-template>
