breads not working

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,30 @@
 <div class="super main_container">
   <tui-root>
     <app-header [title]="title"></app-header>
+    <!--    <tui-breadcrumbs-->
+    <!--      size="l"-->
+    <!--      class="tui-space_top-2"-->
+    <!--    >-->
+    <!--      @if (breadcrumbs$ | async; as bread) {-->
+    <!--        @for (item of bread; track trackByFunction) {-->
+    <!--          <ng-container>-->
+    <!--            <a-->
+    <!--              *tuiItem-->
+    <!--              tuiLink-->
+    <!--              [routerLink]="item.routerLink"-->
+    <!--            >-->
+    <!--              {{ item.caption }}-->
+    <!--            </a>-->
+    <!--          </ng-container>-->
+    <!--        }-->
+    <!--      } @else {-->
+    <!--        <tui-loader></tui-loader>-->
+    <!--      }-->
+    <!--    </tui-breadcrumbs>-->
     <main>
       <div class="main container">
         <div class="main content">
+
           <router-outlet></router-outlet>
         </div>
       </div>
