--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,18 @@
 <div class="super main_container">
   <tui-root>
     <app-header [title]="title"></app-header>
+    <div style="margin: 0; padding: 0;">
+      @if (showBackButton) {
+        <button
+          appearance="outline"
+          tuiButton
+          size="xl"
+          [icon]="'tuiIconArrowLeftLarge'"
+          (click)="goBack()"
+          style="padding-left: 20px; padding-top: 10px; padding-bottom: 0; margin: 0;"
+        >BACK
+        </button>
+      }</div>
     <!--    <tui-breadcrumbs-->
     <!--      size="l"-->
     <!--      class="tui-space_top-2"-->
