--- a/src/styles.less
+++ b/src/styles.less
@@ -76,7 +76,7 @@ aside > * {
 
 .container {
   //height: 100%;
-  padding: 20px;
+  //padding: 20px;
   display: grid;
   grid-template-columns: auto;
   justify-content: stretch;
