store integration in tournaments season sport

--- a/src/app/components/sport/item-sport/item-sport-with-season/item-sport-with-season.component.html
+++ b/src/app/components/sport/item-sport/item-sport-with-season/item-sport-with-season.component.html
@@ -45,6 +45,8 @@
             [formatPath]="tournamentItemHref"
             [titleProperty]="islandTitleProperty"
           ></app-list-of-items-island>
+        } @else {
+          <tui-loader></tui-loader>
         }
 
       </div>
