--- a/src/app/components/sport/sport-nav/sport-nav.component.html
+++ b/src/app/components/sport/sport-nav/sport-nav.component.html
@@ -1,10 +1,12 @@
-@if(dataList$ | async){<app-header-menu
-  [dataList]="dataList$"
-  [mapItemToLabel]="mapItemToLabel"
-  [mapItemToSportRoute]="sportRoutWithSeason"
-  [mapItemToTeamsRoute]="sportTeamsRout"
-  [mapItemToPayersRoute]="sportPlayersRout"
->
-</app-header-menu>} @else {
+@if (sports$ | async) {
+  <app-header-menu
+    [dataList]="sports$"
+    [mapItemToLabel]="mapItemToLabel"
+    [mapItemToSportRoute]="sportRoutWithSeason"
+    [mapItemToTeamsRoute]="sportTeamsRout"
+    [mapItemToPayersRoute]="sportPlayersRout"
+  >
+  </app-header-menu>
+} @else {
   <tui-loader [inheritColor]="true"></tui-loader>
 }
